kubernetes/stripprefix.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-tech-checkin
spec:
  stripPrefix:
    prefixes:
      - /tech-checkin
