kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tech-checkin
spec:
  selector:
    app: tech-checkin
  ports:
    - port: 8000
