kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-checkin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-tech-checkin@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: k3s.ccxs.support
    http:
      paths:
      - path: /tech-checkin
        pathType: Prefix
        backend:
          service:
            name: tech-checkin
            port:
              number: 80
